dim/spec/test_input/invalid_input/backward_config.dim
Config:
  - originator: CompanyName
    category: system
    files:
      - .\modules\duplicate_module.dim
